# Ichor

./: CMakeLists.txt  README.md
include/: language.h  lexer.h  parser.h
src/: lexer.c  main.c  parser.c
tests/: lexer.ichor
